deploy: cd8e4fde3942ea092402183bf32e74cf4751b85e

--- a/lessons/index.adoc
+++ b/lessons/index.adoc
@@ -1,7 +1,7 @@
 = Lessons
 :imagesdir: ../assets/img/
 
-Материал и ссылки на материал необходимые для занятия.
+Материал и ссылки на материал необходимый для занятия.
 
 :leveloffset: +1
 
