--- a/lessons/lesson-02.adoc
+++ b/lessons/lesson-02.adoc
@@ -3,7 +3,17 @@
 == Practice
 
 * Установить *Apache Maven* (обязательно в директорию: `/opt/apache-maven/${version}`).
-* Сгенерировать проект с помощью команды: `mvn archetype:generate`
+** link:https://youtu.be/2hPFBnjDQ4c[How to install Apache Maven?]
+* Сгенерировать проект с помощью команды: `mvn archetype:generate`.
+* Найти и добавить в зависимости *JUnit 5*.
+* Добавить тесты в проект.
+* Поочередно, с помощью CLI, выполнить ниже приведенные команды и убедиться что они выполнили возложенную на их функцию:
+** `mvn compile`
+** `mvn clean`
+** `mvn test`
+** `mvn clean`
+** `mvn package`
+** `mvn clean`
 
 == Homework
 
