--- a/lessons/lesson-02.adoc
+++ b/lessons/lesson-02.adoc
@@ -3,7 +3,7 @@
 == Practice
 
 * Установить *Apache Maven* (обязательно в директорию: `/opt/apache-maven/${version}`).
-** link:https://youtu.be/2hPFBnjDQ4c[How to install Apache Maven?]
+** link:https://youtu.be/2hPFBnjDQ4c[How to install Apache Maven?^]
 * Сгенерировать проект с помощью команды: `mvn archetype:generate`.
 * Найти и добавить в зависимости *JUnit 5*.
 * Добавить тесты в проект.
