deploy: c71f659528160fd682fe1d30a99e83e1310474a8

--- a/lessons/lesson-02.adoc
+++ b/lessons/lesson-02.adoc
@@ -17,5 +17,7 @@
 
 == Homework
 
-* Изучить теоретический материал.
+* Изучить теоретический материал:
+** wiki
+** link:https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162[Apache Maven MindMap]
 * Выполнить задание link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc[Apache Maven: Intro]
