deploy: 07810a7b3c4e5aae3269c3d706aee93d98bca8c9

--- a/lessons/lesson-02.adoc
+++ b/lessons/lesson-02.adoc
@@ -1,4 +1,9 @@
-= Lesson 2
+= Lesson 2: Apache Maven
+
+== Links
+
+* link:https://mvnrepository.com[MVNrepository]
+* link:https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162[MindMap: Apache Maven]
 
 == Practice
 
@@ -17,7 +22,5 @@
 
 == Homework
 
-* Изучить теоретический материал:
-** wiki
-** link:https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162[Apache Maven MindMap]
-* Выполнить задание link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc[Apache Maven: Intro]
+* Изучить теоретический материал.
+* Выполнить задание link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc[Apache Maven: Intro].
