--- a/lessons/lesson-03.adoc
+++ b/lessons/lesson-03.adoc
@@ -22,7 +22,7 @@
 |Климахович Владислав Игоревич|https://proselyte.net/tutorials/hibernate-tutorial/annotations/, https://proselyte.net/tutorials/hibernate-tutorial/hibernate-query-language/
 |Коваленко Алексей Петрович|https://proselyte.net/tutorials/hibernate-tutorial/criteria-queries/, https://proselyte.net/tutorials/hibernate-tutorial/native-sql/
 |Колбасов Илья Николаевич|https://proselyte.net/tutorials/hibernate-tutorial/caching/, https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/
-|Малиновский Павел Сергеевич|???
+|Малиновский Павел Сергеевич|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/
 |Нестерук Даниил Андреевич|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-many-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-many-mapping-example/
 |Парамонов Алексей Владимирович|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-one-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-one-mapping-example/
 |Скопинов Дмитрий Николаевич|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/list-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/collection-mapping-example/
