--- a/index.adoc
+++ b/index.adoc
@@ -8,13 +8,9 @@
 
 Wiki for group JD2-86.
 
-== Links
-
-* link:https://process.rakovets.by[Process for Course]
-* link:https://mvnrepository.com[MVNrepository]
-* link:https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162[MindMap: Apache Maven]
-
 :leveloffset: +1
+
+include::links.adoc[]
 
 include::lessons/index.adoc[]
 
