--- a/lessons/lesson-03.adoc
+++ b/lessons/lesson-03.adoc
@@ -2,14 +2,15 @@
 
 == Practice
 
-* Установить *Git* (обязательно в директорию: `/opt/git`).
-** link:https://youtu.be/z2N2ON87vXY[How to install Git?^]
-* Выполнить задание по link:https://github.com/rakovets/course-development-tools/blob/master/git.adoc[Командная разработка с помощью Git] совместно с разработчиком, которого тренер назначил работать с Вами в паре.
+* Установить *Git*.
+* Выполнить задание:
+** link:https://github.com/rakovets/course-development-tools/blob/master/git.adoc[Командная разработка с помощью Git] совместно с разработчиком, которого тренер назначил работать с Вами в паре.
 
 == Homework
 
 * Изучить теоретический материал.
-* Выполнить задание по Asciidoc: link:https://github.com/rakovets/workshop-asciidoc[Creating documentation with the AsciiDoc]
+* Выполнить задание:
+** link:https://github.com/rakovets/workshop-asciidoc[Creating documentation with the AsciiDoc]
 
 .Маппинг тем для задания по AsciiDoc
 |===
@@ -22,7 +23,7 @@
 |Климахович Владислав Игоревич|https://proselyte.net/tutorials/hibernate-tutorial/annotations/, https://proselyte.net/tutorials/hibernate-tutorial/hibernate-query-language/
 |Коваленко Алексей Петрович|https://proselyte.net/tutorials/hibernate-tutorial/criteria-queries/, https://proselyte.net/tutorials/hibernate-tutorial/native-sql/
 |Колбасов Илья Николаевич|https://proselyte.net/tutorials/hibernate-tutorial/caching/, https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/
-|Малиновский Павел Сергеевич|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/
+|???|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/
 |Нестерук Даниил Андреевич|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-many-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-many-mapping-example/
 |Парамонов Алексей Владимирович|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-one-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-one-mapping-example/
 |Скопинов Дмитрий Николаевич|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/list-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/collection-mapping-example/
