--- a/lessons/lesson-02.adoc
+++ b/lessons/lesson-02.adoc
@@ -3,7 +3,9 @@
 == Practice
 
 * Установить *Apache Maven* (обязательно в директорию: `/opt/apache-maven/${version}`).
-** link:https://youtu.be/2hPFBnjDQ4c[How to install Apache Maven?^]
+
+=== Task 1
+
 * Сгенерировать проект с помощью команды: `mvn archetype:generate`.
 * Найти и добавить в зависимости *JUnit 5*.
 * Добавить тесты в проект.
@@ -18,5 +20,6 @@
 == Homework
 
 * Изучить теоретический материал.
-* Выполнить задание link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc[Apache Maven: Intro].
 * Зарегистрироваться на AWS: https://process.rakovets.by/course/java/enterprise/#_amazon_web_service
+* Выполнить задание:
+** link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/intro/src/main/resources/practice/apache-maven-intro.adoc[Apache Maven: Intro].
