--- a/links.adoc
+++ b/links.adoc
@@ -2,17 +2,23 @@
 
 == Services
 
-* link:https://github.com[GitHub]
-* link:https://mvnrepository.com[MVNrepository]
-* link:https://aws.amazon.com[AWS]
+* link:https://github.com[GitHub^]
+* link:https://mvnrepository.com[MVNrepository^]
+* link:https://aws.amazon.com[AWS^]
 
 == Resources
 
-* link:https://process.rakovets.by[Process for Course]
-* link:https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162[MindMap: Apache Maven]
-* link:https://git-scm.com/book/ru/v2[Справочник: Git]
-* link:https://githowto.com/ru[Практика: Git How To]
+* link:https://process.rakovets.by[Process for Course^]
+* link:https://miro.com/app/board/o9J_lymQARI=/?invite_link_id=562235192162[MindMap: Apache Maven^]
+* link:https://git-scm.com/book/ru/v2[Справочник: Git^]
+* link:https://githowto.com/ru[Практика: Git How To^]
+
+== Videos
+
+* link:https://youtu.be/ilhpwkcvEo0[How to install OpenJDK 11?^]
+* link:https://youtu.be/2hPFBnjDQ4c[How to install Apache Maven?^]
+* link:https://youtu.be/z2N2ON87vXY[How to install Git?^]
 
 == Topics
 
-* link:https://habrahabr.ru/blogs/Git/106912/[Удачная модель ветвления для Git.]
+* link:https://habrahabr.ru/blogs/Git/106912/[Удачная модель ветвления для Git.^]
