--- a/links.adoc
+++ b/links.adoc
@@ -21,6 +21,9 @@
 * link:https://youtu.be/ilhpwkcvEo0[How to install OpenJDK 11?^]
 * link:https://youtu.be/2hPFBnjDQ4c[How to install Apache Maven?^]
 * link:https://youtu.be/z2N2ON87vXY[How to install Git?^]
+* link:https://youtu.be/TUKT1CSzwZI[Lesson 1: Intro. Testing^]
+* link:https://youtu.be/l_6TtVRJlyQ[Lesson 2: Apache Maven. Intro^]
+* link:https://youtu.be/oFEom97DbcA[Lesson 3: Git. Asciidoc^]
 
 == Topics
 
