--- a/links.adoc
+++ b/links.adoc
@@ -18,10 +18,18 @@
 
 == Videos
 
+=== Environment
+
 * link:https://youtu.be/ilhpwkcvEo0[How to install OpenJDK 11?^]
 * link:https://youtu.be/2hPFBnjDQ4c[How to install Apache Maven?^]
 * link:https://youtu.be/z2N2ON87vXY[How to install Git?^]
 * link:https://youtu.be/hEgZl79EPlQ[How to install Apache Tomcat?^]
+* link:https://youtu.be/j4oDBGNWtys[How to create an IAM user to AWS?^]
+* link:https://youtu.be/jIxiPgXZ2W8[How to create an EC2 instance to AWS?^]
+* link:https://youtu.be/wJi5i_Ty5pQ[How to set up Java environment an EC2 instance to AWS?^]
+
+=== Lessons
+
 * link:https://youtu.be/TUKT1CSzwZI[Lesson 1: Intro. Testing^]
 * link:https://youtu.be/l_6TtVRJlyQ[Lesson 2: Apache Maven. Intro^]
 * link:https://youtu.be/oFEom97DbcA[Lesson 3: Git. Asciidoc^]
