deploy: e1757686aa6aa311bca2a5acfa0e0d9270acfcde

--- a/lessons/lesson-08.adoc
+++ b/lessons/lesson-08.adoc
@@ -2,6 +2,7 @@
 
 == Practice
 
+* Установить *PostgreSQL* `latest`
 * Выполнить задание:
 ** link:https://github.com/rakovets/course-sql/blob/master/tasks/basics.adoc[Basics].
 ** link:https://github.com/rakovets/course-sql/blob/master/tasks/data-manipulation.adoc[Data manipulation].
