feat: add link of video for lesson 8

--- a/links.adoc
+++ b/links.adoc
@@ -37,6 +37,7 @@
 * link:https://youtu.be/QAl8S9qtTwE[Lesson 5: Apache Tomcat. Servlet^]
 * link:https://youtu.be/i3iF8wkUFQY[Lesson 6: Servlets. JSP^]
 * link:https://youtu.be/bPMIpwtjKZY[Lesson 7: Filter. JSTL. EL^]
+* link:https://youtu.be/SpnATl0KeRU[Lesson 8: Введение в Базы данных и SQL^]
 
 == Topics
 
