--- a/links.adoc
+++ b/links.adoc
@@ -40,6 +40,7 @@
 * link:https://youtu.be/SpnATl0KeRU[Lesson 8: Введение в Базы данных и SQL^]
 * link:https://youtu.be/dv-Mt2Cpun0[Lesson 9: Нормализация. Группировки. Joins^]
 * link:https://youtu.be/ZFZMBW3wyj0[Lesson 10: Java Database Connectivity (JDBC)^]
+* link:https://youtu.be/RauHxlrEo0Y[Lesson 11: Data Access Object (DAO)^]
 
 == Topics
 
