feat: update project

--- a/project/stage-01.adoc
+++ b/project/stage-01.adoc
@@ -1,28 +1,47 @@
-= Stage 01: Проработка функционала проекта
+= Stage 00: Инициализация проекта
 
-На этом этапе прорабатывается функциональность, которую будет выполнять приложение. Нет никаких ограничений сверху по количеству функционала, но в то же самое время не стоит продумывать проект на месяцы разработки вперед.
-
-NOTE: *MVP* - *Minimal Viable Product* (*минимально жизнеспособный продукт*)
-
-image::mvp.jpg[MVP]
+На подготовительном этапе прорабатывается идея проекта и его особенности. После чего необходимо инициализировать git-repository для проекта.
 
 == Tasks
 
-* Выделить CORE (ядро) вашего функционала, которое будет выступать как *MVP* для вашего проекта. Оно будет являться *EPIC 1*, с которого и начнется разработка проекта.
+* Создать remote repository для проекта в *Organisation*: link:https://github.com/orgs/JD2-86/[JD2-86^]
+* Добавить в проект файл `README.adoc`, который содержит описание проекта. Пример шаблона приведен ниже.
 
-image::user-story-diagram.png[User story diagram]
+.Шаблон `README.adoc` для проекта
+----
+= ${your-project-name}
 
-* Сформулировать для этого *EPIC* *User Stories*, т.е. произвести декомпозицию глобальной задачи в пользовательский функционал. *User Story* должны соответствовать шаблону:
+== Description
 
-    КАК ${ROLE} ХОЧУ ${FUNCTIONALITY} ПОТОМУ ЧТО ${PROFIT}
+==== Какою проблему данный проект решает или что нового приносит для пользователей?
 
-** `${ROLE}` - роль пользователя в системе
-** `${FUNCTIONALITY}` - функциональность, которая должна быть доступна этой пользовательской роли (некоторое ОДНО действие)
-** `${PROFIT}` - польза или причина, по которой эта функциональность необходима.
+* Пункт 1
+* Пункт 2
+* ...
+* Пункт N
 
-* Выделить *Roles* возникшие в процессе формирования *User Story*
-* Выделить еще несколько *EPICS* для будущей декомпозиции.
+==== Потенциальные пользователи
+
+* Пункт 1
+* Пункт 2
+* ...
+* Пункт N
+
+==== Аналогичные приложения
+
+* Пункт 1
+* Пункт 2
+* ...
+* Пункт N
+
+==== Конкурентное преимущество
+
+* Пункт 1
+* Пункт 2
+* ...
+* Пункт N
+----
 
 == Example
 
-https://miro.com/app/board/uXjVOY8hA_k=/?invite_link_id=177006962450
+link:https://github.com/JD2-86/interview-helper[Interview Helper^]
