refactor: update project's stage 01

--- a/project/stage-01.adoc
+++ b/project/stage-01.adoc
@@ -1,4 +1,4 @@
-= Stage 00: Инициализация проекта
+= Stage 01: Инициализация проекта
 
 На подготовительном этапе прорабатывается идея проекта и его особенности. После чего необходимо инициализировать git-repository для проекта.
 
@@ -13,28 +13,28 @@
 
 == Description
 
-==== Какою проблему данный проект решает или что нового приносит для пользователей?
+=== Какую проблему данный проект решает или что нового приносит для пользователей?
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Потенциальные пользователи
+=== Потенциальные пользователи
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Аналогичные приложения
+=== Аналогичные приложения
 
 * Пункт 1
 * Пункт 2
 * ...
 * Пункт N
 
-==== Конкурентное преимущество
+=== Конкурентное преимущество
 
 * Пункт 1
 * Пункт 2
