refactor: project's stage 02

--- a/project/stage-02.adoc
+++ b/project/stage-02.adoc
@@ -8,13 +8,13 @@ image::mvp.jpg[MVP]
 
 == Tasks
 
-WARNING: Все нижеописанное, лучше делать с помощью *Mind Map*. В качестве online-инструмента может выступать например: https://miro.com
+WARNING: Все нижеописанное, удобнее (на данном этапе) реализовывать с помощью *Mind Map*. В качестве online-инструмента может выступать например: https://miro.com
 
 * Выделить CORE (ядро) вашего функционала, которое будет выступать как *MVP* для вашего проекта. Оно будет являться *EPIC 1*, с которого и начнется разработка проекта.
 
 image::user-story-diagram.png[User story diagram]
 
-* Сформулировать для этого *EPIC* *User Stories*, т.е. произвести декомпозицию глобальной задачи в пользовательский функционал. *User Story* должны соответствовать шаблону:
+* Сформулировать для этого *EPIC* пользовательские истории (*User Stories*), т.е. произвести декомпозицию глобальной задачи в пользовательский функционал. *User Story* должны соответствовать шаблону:
 
     КАК ${ROLE} ХОЧУ ${FUNCTIONALITY} ПОТОМУ ЧТО ${PROFIT}
 
@@ -22,8 +22,9 @@ image::user-story-diagram.png[User story diagram]
 ** `${FUNCTIONALITY}` - функциональность, которая должна быть доступна этой пользовательской роли (некоторое ОДНО действие)
 ** `${PROFIT}` - польза или причина, по которой эта функциональность необходима.
 
-* Выделить *Roles* возникшие в процессе формирования *User Story*
+* Выделить *ROLES* возникшие в процессе формирования *User Story*.
 * Выделить еще несколько *EPICS* для будущей декомпозиции.
+* Добавить ссылку на проработанную функциональность.
 
 == Example
 
