--- a/project/index.adoc
+++ b/project/index.adoc
@@ -10,6 +10,17 @@ include::stage-01.adoc[]
 
 include::stage-02.adoc[]
 
+include::stage-03.adoc[]
+
+== Versioning
+
+Для прозрачности понимания и использования следует придерживаться следующих принципов:
+
+* Каждая *VERSION* продукта эквивалентен одному *EPIC*.
+* Каждый последующие *EPIC* увеличивают *VERSION* продукта итеративно, т.е. `+1` к версии.
+* *UML Class Diagram* должны составляться под каждую новую *VERSION* продукта, на базе предыдущей.
+* *UML Class Diagrams* для прошлых *VERSIONS* должны храниться в первоначальном состоянии, а не измененными в рамках другой *VERSION*.
+
 include::themes.adoc[]
 
 :leveloffset: -1
