--- a/links.adoc
+++ b/links.adoc
@@ -24,6 +24,7 @@
 * link:https://youtu.be/2hPFBnjDQ4c[How to install Apache Maven?^]
 * link:https://youtu.be/z2N2ON87vXY[How to install Git?^]
 * link:https://youtu.be/hEgZl79EPlQ[How to install Apache Tomcat?^]
+* link:https://youtu.be/RXK8xhtnWR4[How to install PostgreSQL?^]
 * link:https://youtu.be/j4oDBGNWtys[How to create an IAM user to AWS?^]
 * link:https://youtu.be/jIxiPgXZ2W8[How to create an EC2 instance to AWS?^]
 * link:https://youtu.be/wJi5i_Ty5pQ[How to set up Java environment an EC2 instance to AWS?^]
