--- a/links.adoc
+++ b/links.adoc
@@ -43,6 +43,7 @@
 * link:https://youtu.be/ZFZMBW3wyj0[Lesson 10: Java Database Connectivity (JDBC)^]
 * link:https://youtu.be/RauHxlrEo0Y[Lesson 11: Data Access Object (DAO)^]
 * link:https://youtu.be/6ZjaO8hGiQA[Lesson 12: Java Persistence API (JPA)^]
+* link:https://youtu.be/ToLGj3iEPcw[Lesson 13: Intro to Hibernate^]
 
 == Topics
 
