--- a/lessons/lesson-18.adoc
+++ b/lessons/lesson-18.adoc
@@ -2,7 +2,7 @@
 
 == Practice
 
-* Выполнить link:https://github.com/rakovets/course-java-data-persistence/blob/master/10-query-criteria/src/main/resources/rbac-db-schema.png[Query with Criteria API]
+* Выполнить link:https://github.com/rakovets/course-java-data-persistence/blob/master/10-query-criteria/src/main/resources/query-criteria.adoc[Query with Criteria API]
 
 == Homework
 
