feat: add video for lesson 18

--- a/links.adoc
+++ b/links.adoc
@@ -47,6 +47,7 @@
 * link:https://youtu.be/ToLGj3iEPcw[Lesson 13: Intro to Hibernate^]
 * link:https://youtu.be/at9aFK2fgGE[Lesson 14: Hibernate. Basic Mapping^]
 * link:https://youtu.be/RNeUZKSU5l8[Lesson 15: Hibernate. Mapping Hierarchy^]
+* link:https://youtu.be/d0C9N870w5o[Lesson 18: Hibernate. Criteria API^]
 
 == Topics
 
