--- a/lessons/index.adoc
+++ b/lessons/index.adoc
@@ -41,4 +41,8 @@ include::lesson-17.adoc[]
 
 include::lesson-18.adoc[]
 
+include::lesson-19.adoc[]
+
+include::lesson-20.adoc[]
+
 :leveloffset: -1
