--- a/lessons/lesson-20.adoc
+++ b/lessons/lesson-20.adoc
@@ -3,8 +3,8 @@
 == Practice
 
 * Выполнить задание:
-** link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/multi-modules/src/main/resources/practice/apache-maven-multi-modules.adoc[Apache Maven: Multi-modules project.].
-** link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/profiles/src/main/resources/practice/apache-maven-profiles.adoc[Apache Maven: Profiles.].
+** link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/multi-modules/src/main/resources/practice/apache-maven-multi-modules.adoc[Apache Maven: Multi-modules project].
+** link:https://github.com/rakovets/course-java-tools/blob/master/apache-maven/profiles/src/main/resources/practice/apache-maven-profiles.adoc[Apache Maven: Profiles].
 
 == Homework
 
