--- a/lessons/lesson-03.adoc
+++ b/lessons/lesson-03.adoc
@@ -17,13 +17,13 @@
 |===
 |Разработчик|Links for source topic|Done
 |Антонович Валентина Георгиевна|https://proselyte.net/tutorials/hibernate-tutorial/introduction/, https://proselyte.net/tutorials/hibernate-tutorial/architecture/ |Yes
-|Василевич Виталий Валерьевич|https://proselyte.net/tutorials/hibernate-tutorial/configure/, https://proselyte.net/tutorials/hibernate-tutorial/sessions/ |No
+|Василевич Виталий Валерьевич|https://proselyte.net/tutorials/hibernate-tutorial/configure/, https://proselyte.net/tutorials/hibernate-tutorial/sessions/ |Fixed by trainer
 |Жигалко Евгений Владимирович|https://javarush.ru/groups/posts/2112-kratkiy-ehkskurs-v-vnedrenie-zavisimostey-ili-chto-ejshje-za-cdi |Yes
 |Кармызов Сергей Николаевич|https://proselyte.net/tutorials/hibernate-tutorial/persistent-classes/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-files/ |Yes
 |Карпович Владислав Андреевич|https://proselyte.net/tutorials/hibernate-tutorial/simple-application/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/ |Yes
-|Климахович Владислав Игоревич|https://proselyte.net/tutorials/hibernate-tutorial/annotations/, https://proselyte.net/tutorials/hibernate-tutorial/hibernate-query-language/ |Need to fix
+|Климахович Владислав Игоревич|https://proselyte.net/tutorials/hibernate-tutorial/annotations/, https://proselyte.net/tutorials/hibernate-tutorial/hibernate-query-language/ |Fixed and added by trainer
 |Коваленко Алексей Петрович|https://proselyte.net/tutorials/hibernate-tutorial/criteria-queries/, https://proselyte.net/tutorials/hibernate-tutorial/native-sql/ |Yes
-|Колбасов Илья Николаевич|https://proselyte.net/tutorials/hibernate-tutorial/caching/, https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/ |Need to fix
+|Колбасов Илья Николаевич|https://proselyte.net/tutorials/hibernate-tutorial/caching/, https://proselyte.net/tutorials/hibernate-tutorial/batch-processing/ |Fixed by trainer
 |Карпович Дмитрий Владимирович|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/map-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/sortedset-mapping-example-2/ |No
 |Нестерук Даниил Андреевич|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-many-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-many-mapping-example/ |No
 |Парамонов Алексей Владимирович|https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/many-to-one-mapping-example/, https://proselyte.net/tutorials/hibernate-tutorial/mapping-types/one-to-one-mapping-example/ |Yes
