--- a/links.adoc
+++ b/links.adoc
@@ -58,7 +58,13 @@
 * link:https://youtu.be/887IH9BXu_4[Lesson 26: Spring Data^]
 * link:https://youtu.be/Fhlp95KXUCs[Lesson 27: Spring REST Client^]
 * link:[Lesson 28: Spring Security^]
-* link:[Lesson 29: Spring Boot^]
+* link:[Lesson 29: Data Persistence. DB migration^]
+* link:[Lesson 30: Spring Boot^]
+* link:[Lesson 31: Tools. Mapping^]
+* link:[Lesson 32: Spring Testing^]
+* link:[Lesson 33: Tools. Logging^]
+* link:[Lesson 34: Spring Framework. AOP^]
+* link:[Lesson 35: Demo. Roadmap^]
 
 == Topics
 
