--- a/links.adoc
+++ b/links.adoc
@@ -57,8 +57,8 @@
 * link:https://youtu.be/vs8SARbfR-s[Lesson 25: Spring Framework: REST-service^]
 * link:https://youtu.be/887IH9BXu_4[Lesson 26: Spring Data^]
 * link:https://youtu.be/Fhlp95KXUCs[Lesson 27: Spring REST Client^]
-* link:[Lesson 28: Spring Security^]
-* link:[Lesson 29: Data Persistence. DB migration^]
+* link:https://youtu.be/ezUL_xtZf58[Lesson 28: Spring Security^]
+* link:https://youtu.be/g2_b3kXMj78[Lesson 29: Data Persistence. DB migration^]
 * link:[Lesson 30: Spring Boot^]
 * link:[Lesson 31: Tools. Mapping^]
 * link:[Lesson 32: Spring Testing^]
