--- a/links.adoc
+++ b/links.adoc
@@ -59,7 +59,7 @@
 * link:https://youtu.be/Fhlp95KXUCs[Lesson 27: Spring REST Client^]
 * link:https://youtu.be/ezUL_xtZf58[Lesson 28: Spring Security^]
 * link:https://youtu.be/g2_b3kXMj78[Lesson 29: Data Persistence. DB migration^]
-* link:[Lesson 30: Spring Boot^]
+* link:https://youtu.be/pCJ95QtHtyM[Lesson 30: Spring Boot^]
 * link:[Lesson 31: Tools. Mapping^]
 * link:[Lesson 32: Spring Testing^]
 * link:[Lesson 33: Tools. Logging^]
